--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -21,13 +21,11 @@
             </div>
         </a>
         <div class="col-xs-2" style="padding: 0px">
-            <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal" style="padding: 5px; height: 40px; width: 100%;"><img src="../img/max/shopping.png" style="height: 30px"></a>
+            <a href="#myModal" class="btn options" data-toggle="modal" style="padding: 5px; height: 40px; width: 100%;"><img src="../img/max/options.png" style="height: 30px; margin-left: 20px"
+                    onmouseover="this.src='../img/max/options2.png'"
+                    onmouseout="this.src='../img/max/options.png'"></a>
         </div>
     </div>
-
-
-
-
     <!-- Modal HTML -->
     <div id="myModal" class="modal fade">
         <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px;">
