--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -28,7 +28,7 @@
         <!-- Modal HTML -->
         <div id="myModal" class="modal fade">
             <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px; ">
-                <div class="modal-content" style="background-color: rgba(110, 110, 110, 1);">
+                <div class="modal-content" style="background-color: rgba(110, 110, 110, 1); border-radius: 0px">
                     <div class="modal-header">
                         <h4 class="modal-title">Sort by:</h4>
                     </div>
