changes in "content-info" style minor changes like div sizes and a lot of css better placed

--- a/sites/faqSites/tickets.html
+++ b/sites/faqSites/tickets.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<div id="everything" class="content-info" style="padding: 5px; text-align: center">
+<div id="everything" class="content-info" style="text-align: center">
 
 
     <a href="" style="text-decoration: none" class="js">
