--- a/sites/food.html
+++ b/sites/food.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
+<div id="everything" class="content-info">
     <a href="../index.html" class="js">
         <div class="header_div">
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
