--- a/sites/love/gallery.html
+++ b/sites/love/gallery.html
@@ -34,7 +34,7 @@
 
 <body>
 
-<div class="content-info" style="padding: 5px; color: #ffffff">
+<div class="content-info">
     <a href="" class="js" style="text-decoration: none">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
