--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -25,19 +25,19 @@
 
 <body>
 
-<div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
+<div id="everything" class="content-info">
     <a href="../index.html" class="js">
         <div class="header_div">
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
 
-    <div class="tt_info tt_text" style="margin: 10px 10px 0px 10px">Coming up now!</div>
+    <div class="tt_info tt_text">Coming up now!</div>
 
     <div class="tt_row">
         <div class="col-xs-6" style="padding: 10px">
             <div class="tt_element">
-                <a href="tt_artist.html" style="text-decoration: none; color:#ffffff">
+                <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
                     <div class="tt_text">Artists</div>
                     <div><img src="../img/max/dj_ohne.png" class="tt_img"></div>
                 </a>
@@ -45,7 +45,7 @@
         </div>
         <div class="col-xs-6" style="padding: 10px">
             <div class="tt_element">
-                <a href="tt_stages.html" style="text-decoration: none; color:#ffffff">
+                <a href="tt_stages.html" style="text-decoration: none; color: #ffffff;">
                     <div class="tt_text">Stages</div>
                     <div ><img src="../img/max/stages.png" class="tt_img"></div>
                 </a>
