--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
+    <div id="everything" class="content-info">
         <div class="row" style="padding: 0px; margin: 0px 0px 5px 0px; ">
             <a href="" style="text-decoration: none;" class="js">
                 <div class="col-xs-10 header_div" onclick="history.go(-1);return true;" style="padding: 0px">
@@ -20,15 +20,15 @@
                 </div>
             </a>
             <div class="col-xs-2" style="padding: 0px">
-                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 15px"
+                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 5px"
                     onmouseover="this.src='../img/max/options2.png'"
                     onmouseout="this.src='../img/max/options.png'"></a>
             </div>
         </div>
         <!-- Modal HTML -->
         <div id="myModal" class="modal fade">
-            <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px; ">
-                <div class="modal-content" style="background-color: rgba(110, 110, 110, 1); border-radius: 0px">
+            <div class="modal-dialog tt-modal-dialog">
+                <div class="modal-content tt-modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Sort by:</h4>
                     </div>
