high res images for merch

--- a/sites/love/merch.html
+++ b/sites/love/merch.html
@@ -45,30 +45,30 @@
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/snapback.jpg" class="merch_img"/>
                 <div class="merch_text">Snapback<br>€25,00*</div></div>
-            <a href="../../img/merch/snapback_big2.jpg" data-lightbox="snapback" data-title="Snapback - € 25.00"></a>
-            <a href="../../img/merch/snapback_big3.jpg" data-lightbox="snapback" data-title="Snapback - € 25.00"></a>
-            <a href="../../img/merch/snapback_big4.jpg" data-lightbox="snapback" data-title="Snapback Grey - € 25.00"></a>
-            <a href="../../img/merch/snapback_big5.jpg" data-lightbox="snapback" data-title="Snapback Grey - € 25.00"></a>
-            <a href="../../img/merch/snapback_big6.jpg" data-lightbox="snapback" data-title="Snapback Grey - € 25.00"></a>
-        </a> - € 10.00
+            <a href="../../img/merch/snapback_big2.jpg" data-lightbox="snapback" data-title="Snapback - € 25,00"></a>
+            <a href="../../img/merch/snapback_big3.jpg" data-lightbox="snapback" data-title="Snapback - € 25,00"></a>
+            <a href="../../img/merch/snapback_big4.jpg" data-lightbox="snapback" data-title="Snapback Grey - € 25,00"></a>
+            <a href="../../img/merch/snapback_big5.jpg" data-lightbox="snapback" data-title="Snapback Grey - € 25,00"></a>
+            <a href="../../img/merch/snapback_big6.jpg" data-lightbox="snapback" data-title="Snapback Grey - € 25,00"></a>
+        </a>
 
-        <a href="../../img/merch/felice-cap_big.jpg" data-lightbox="felice" data-title="Felice Cap - € 20.00">
+        <a href="../../img/merch/felice-cap_big.jpg" data-lightbox="felice" data-title="Felice Cap - € 20,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/felice-cap.jpg" class="merch_img"/>
                 <div class="merch_text">Felice Cap<br>€20,00*</div></div>
         </a>
 
-        <a href="../../img/merch/trucker-cap_big1.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10.00">
+        <a href="../../img/merch/trucker-cap_big1.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/felice-cap.jpg" class="merch_img"/>
                 <div class="merch_text">Trucker Cap<br>€10,00*</div></div>
-            <a href="../../img/merch/trucker-cap_big2.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10.00"></a>
-            <a href="../../img/merch/trucker-cap_big3.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10.00"></a>
-            <a href="../../img/merch/trucker-cap_big4.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10.00"></a>
+            <a href="../../img/merch/trucker-cap_big2.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00"></a>
+            <a href="../../img/merch/trucker-cap_big3.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00"></a>
+            <a href="../../img/merch/trucker-cap_big4.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00"></a>
 
         </a>
 
-        <a href="../../img/merch/glasses-lens_big.jpg" data-lightbox="glass" data-title="Glasses Lens - € 4.00">
+        <a href="../../img/merch/glasses-lens_big.jpg" data-lightbox="glass" data-title="Glasses Lens - € 4,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/glasses-lens.jpg" class="merch_img"/>
                 <div class="merch_text">Glasses Lens<br>€4,00*</div></div>
@@ -79,77 +79,71 @@
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/glasses.jpg" class="merch_img"/>
                 <div class="merch_text">Glasses<br>€4,00*</div></div>
-            <a href="../../img/merch/glasses_red_big.jpg" data-lightbox="glass" data-title="Glasses Red - € 4.00"></a>
+            <a href="../../img/merch/glasses_red_big.jpg" data-lightbox="glass" data-title="Glasses Red - € 4,00"></a>
         </a>
 
-        <a href="../../img/merch/hoodie-female_big.jpg" data-lightbox="hooodieF" data-title="Hoodie - Female">
+        <a href="../../img/merch/hoodie-female_big.jpg" data-lightbox="hooodieF" data-title="Hoodie - Female - € 37,50">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/hoodie-female.jpg" class="merch_img"/>
                 <div class="merch_text">Hoodie - Female<br>€37,50*</div></div>
         </a>
 
-        <a href="../../img/merch/hoodie-male_big.jpg" data-lightbox="hooodieM" data-title="Hoodie - Male">
+        <a href="../../img/merch/hoodie-male_big.jpg" data-lightbox="hooodieM" data-title="Hoodie - Male - € 37,50">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/hoodie-male.jpg" class="merch_img"/>
                 <div class="merch_text">Hoodie - Male<br>€37,50*</div></div>
         </a>
 
-        <a href="../../img/merch/eat-sleep-love-repeat-female_big.jpg" data-lightbox="eatF" data-title="Eat Sleep Love Repeat - Female">
+        <a href="../../img/merch/eat-sleep-love-repeat-female_big.jpg" data-lightbox="eatF" data-title="Eat Sleep Love Repeat - Female - € 12,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/eat-sleep-love-repeat-female.jpg" class="merch_img"/>
-                <div class="merch_text">Eat Sleep <br>Love Repeat<br>€12,00*</div></div>
+                <div class="merch_text">Eat Sleep <br>Love Repeat - Female<br>€12,00*</div></div>
         </a>
 
-        <a href="../../img/merch/eat-sleep-love-repeat-male_big.jpg" data-lightbox="eatM" data-title="Eat Sleep Love Repeat - Male">
+        <a href="../../img/merch/eat-sleep-love-repeat-male_big.jpg" data-lightbox="eatM" data-title="Eat Sleep Love Repeat - Male - € 12,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/eat-sleep-love-repeat-male.jpg" class="merch_img"/>
-                <div class="merch_text">Eat Sleep <br>Love Repeat<br>€12,00*</div></div>
+                <div class="merch_text">Eat Sleep <br>Love Repeat - Male<br>€12,00*</div></div>
         </a>
 
-        <a href="../../img/merch/aphrodite-female_big.jpg" data-lightbox="aphroditeF" data-title="Aphrodite - Female">
+        <a href="../../img/merch/aphrodite-female_big.jpg" data-lightbox="aphroditeF" data-title="Aphrodite - Female - € 12,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/aphrodite-female.jpg" class="merch_img"/>
                 <div class="merch_text">Aphrodite - <br>Female <br>€12,00*</div></div>
         </a>
 
-        <a href="../../img/merch/aphrodite-male_big.jpg" data-lightbox="aphroditeM" data-title="Aphrodite - Male">
+        <a href="../../img/merch/aphrodite-male_big.jpg" data-lightbox="aphroditeM" data-title="Aphrodite - Male - € 13,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/aphrodite-male.jpg" class="merch_img"/>
                 <div class="merch_text">Aphrodite - <br>Male <br>€13,00*</div></div>
         </a>
 
-        <a href="../../img/merch/music-on-world-off-male_big.jpg" data-lightbox="musicOn" data-title="Music On World Off - Male">
+        <a href="../../img/merch/music-on-world-off-male_big.jpg" data-lightbox="musicOn" data-title="Music On World Off - Male - € 12,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/music-on-world-off-male.jpg" class="merch_img"/>
                 <div class="merch_text">Music On World Off - Male<br>€12,00*</div></div>
         </a>
 
-        <a href="../../img/merch/sloganherz-lineup-female_big.jpg" data-lightbox="sloganF" data-title="Sloganheart + Lineup - Female">
+        <a href="../../img/merch/sloganherz-lineup-female_big.jpg" data-lightbox="sloganF" data-title="Sloganheart + Lineup - Female - € 13,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/sloganherz-lineup-female.jpg" class="merch_img"/>
-                <div class="merch_text">Aphrodite - <br>Female <br>€12,00*</div></div>
+                <div class="merch_text">Slogan Heart +<br>Lineup - Female <br>€13,00*</div></div>
             <a href="../../img/merch/sloganherz-lineup-female2_big.jpg" data-lightbox="sloganF" data-title="Sloganheart + Lineup - Female"></a>
         </a>
 
-        <a href="../../img/merch/blumenherz-female_big.jpg" data-lightbox="flowerF" data-title="Flower Heart - Female">
+        <a href="../../img/merch/blumenherz-female_big.jpg" data-lightbox="flowerF" data-title="Flower Heart - Female - € 13,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/blumenherz-female.jpg" class="merch_img"/>
                 <div class="merch_text">Flower Heart - <br>Female <br>€13,00*</div></div>
         </a>
 
-        <a href="../../img/merch/camouflage-herz-female_big.jpg" data-lightbox="camouF" data-title="Camouflage Heart - Female">
+        <a href="../../img/merch/camouflage-herz-female_big.jpg" data-lightbox="camouF" data-title="Camouflage Heart - Female - € 13,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/camouflage-herz-female.jpg" class="merch_img"/>
                 <div class="merch_text">Camouflage Heart - <br>Female <br>€13,00*</div></div>
         </a>
 
-        <a href="../../img/merch/blumenherz-female_big.jpg" data-lightbox="flowerF" data-title="Flower Heart - Female">
-            <div class="col-xs-4 col-md-3 merch_container">
-                <img src="../../img/merch/blumenherz-female.jpg" class="merch_img"/>
-                <div class="merch_text">Flower Heart - <br>Female <br>€13,00*</div></div>
-        </a>
-
-        <a href="../../img/merch/sloganherz-male_big.jpg" data-lightbox="sloganM" data-title="Slogan Heart - Male">
+        <a href="../../img/merch/sloganherz-male_big.jpg" data-lightbox="sloganM" data-title="Slogan Heart - Male - € 13,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/sloganherz-male.jpg" class="merch_img"/>
                 <div class="merch_text">Slogan Heart - <br>Male<br>€13,00*</div></div>
