--- a/sites/love/merch.html
+++ b/sites/love/merch.html
@@ -68,11 +68,11 @@
 
         </a>
 
-        <a href="../../img/merch/glasses-lens_big.jpg" data-lightbox="glass" data-title="Glasses Lens - € 4,00">
+        <a href="../../img/merch/glasses-lens_big.jpg" data-lightbox="glassL" data-title="Glasses Lens - € 4,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/glasses-lens.jpg" class="merch_img"/>
                 <div class="merch_text">Glasses Lens<br>€4,00*</div></div>
-            <a href="../../img/merch/glasses-lens_red_big.jpg" data-lightbox="glass" data-title="Glasses Lens Red"></a>
+            <a href="../../img/merch/glasses-lens_red_big.jpg" data-lightbox="glassL" data-title="Glasses Lens Red"></a>
         </a>
 
         <a href="../../img/merch/glasses_big.jpg" data-lightbox="glass" data-title="Glasses">
@@ -140,7 +140,7 @@
         <a href="../../img/merch/camouflage-herz-female_big.jpg" data-lightbox="camouF" data-title="Camouflage Heart - Female - € 13,00">
             <div class="col-xs-4 col-md-3 merch_container">
                 <img src="../../img/merch/camouflage-herz-female.jpg" class="merch_img"/>
-                <div class="merch_text">Camouflage Heart - <br>Female <br>€13,00*</div></div>
+                <div class="merch_text">Camouflage Heart<br>- Female <br>€13,00*</div></div>
         </a>
 
         <a href="../../img/merch/sloganherz-male_big.jpg" data-lightbox="sloganM" data-title="Slogan Heart - Male - € 13,00">
