--- a/sites/love/merch.html
+++ b/sites/love/merch.html
@@ -60,7 +60,7 @@
 
         <a href="../../img/merch/trucker-cap_big1.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00">
             <div class="col-xs-4 col-md-3 merch_container">
-                <img src="../../img/merch/felice-cap.jpg" class="merch_img"/>
+                <img src="../../img/merch/trucker-cap.jpg" class="merch_img"/>
                 <div class="merch_text">Trucker Cap<br>€10,00*</div></div>
             <a href="../../img/merch/trucker-cap_big2.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00"></a>
             <a href="../../img/merch/trucker-cap_big3.jpg" data-lightbox="trucker" data-title="Trucker Cap - € 10,00"></a>
