--- a/sites/love/countdown.html
+++ b/sites/love/countdown.html
@@ -1,45 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Countdown</title>
 
-    <!-- Bootstrap init -->
-    <script src="../../js/jquery-1.11.2.min.js"></script>
-    <script src="../../js/bootstrap.min.js"></script>
-    <script src="../../js/jquery.countdown-2.0.4/jquery.countdown.min.js"></script>
-    <script src="../../js/jquery.countdown-2.0.4/time.js"></script>
-    <script src="../../js/main.js"></script>
-
-    <!-- Styles init -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css">
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="../../css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="../../css/styles.css" type="text/css">
-
-    <title>Time until Electric Love Festival starts</title>
+    <link rel="stylesheet" href="../../css/flipclock.css"/>
 
 </head>
-
 <body>
-    <div id="everything" class="content-info ">
-        <a href="" class="js" style="text-decoration: none">
-            <div class="header_div" onclick="history.go(-1);return true;">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
-                Countdown
-            </div>
-        </a>
-        <img src="../../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 60%; max-width: 400px"/>
-        <div class="clocktext">
-            <div class="visible-sm visible-md visible-lg">Time until Electric Love 2015</div>
-            <div class="clockbox" id="clock"></div>
-        </div>
+<div class="clock" style="width: auto; margin-top: 20px; margin-bottom: 20px;"></div>
 
-
-    </div>
+<script src="../../js/jquery-1.11.2.min.js"></script>
+<script src="../../js/flipclock.min.js"></script>
+<script type="text/javascript">
+    var clock = $('.clock').FlipClock(4895400, {
+        clockFace: 'DailyCounter',
+        countdown: true
+    });
+</script>
 </body>
-
 </html>
 
 
