--- a/sites/love/countdown.html
+++ b/sites/love/countdown.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Countdown</title>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-    <link rel="stylesheet" href="../../css/flipclock.css"/>
+    <!-- Bootstrap init -->
+    <script src="../../js/jquery-1.11.2.min.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
+    <script src="../../js/jquery.countdown.js"></script>
+    <script src="../../js/main.js"></script>
+
+    <!-- Styles init -->
+    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css">
+    <link rel="stylesheet" href="../../css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="../../css/styles.css" type="text/css">
+
+    <title>Time until Electric Love Festival starts</title>
+
+    <script>$('#clock').countdown('2020/10/10', function(event) {
+          var $this = $(this).html(event.strftime(''
+            + '<span>%w</span> weeks '
+            + '<span>%d</span> days '
+            + '<span>%H</span> hr '
+            + '<span>%M</span> min '
+            + '<span>%S</span> sec'));
+        });</script>
 
 </head>
+
 <body>
-<div class="clock" style="width: auto; margin-top: 20px; margin-bottom: 20px;"></div>
+<div id="everything" class="content-info ">
+    <a href="" class="js" style="text-decoration: none">
+        <div class="header_div" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+            Countdown
+        </div>
+    </a>
 
-<script src="../../js/jquery-1.11.2.min.js"></script>
-<script src="../../js/flipclock.min.js"></script>
-<script type="text/javascript">
-    var clock = $('.clock').FlipClock(4895400, {
-        clockFace: 'DailyCounter',
-        countdown: true
-    });
-</script>
+    <div id="clock" style="height: 400px"></div>
+
+
+</div>
 </body>
+
 </html>
-
-
