--- a/sites/love/countdown.html
+++ b/sites/love/countdown.html
@@ -1,47 +1,160 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <!-- Bootstrap init -->
     <script src="../../js/jquery-1.11.2.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
-    <script src="../../js/jquery.countdown.js"></script>
     <script src="../../js/main.js"></script>
+    <script src="phonegap.js"></script>
 
     <!-- Styles init -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="../../css/styles.css" type="text/css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="../../css/bootstrap-theme.min.css" type="text/css"/>
+    <link rel="stylesheet" href="../../css/normalize.css" type="text/css"/>
+    <link href="../../css/styles.css" rel="stylesheet" type="text/css"/>
 
-    <title>Time until Electric Love Festival starts</title>
 
-    <script>$('#clock').countdown('2020/10/10', function(event) {
-          var $this = $(this).html(event.strftime(''
-            + '<span>%w</span> weeks '
-            + '<span>%d</span> days '
-            + '<span>%H</span> hr '
-            + '<span>%M</span> min '
-            + '<span>%S</span> sec'));
-        });</script>
+    <title>Electric Love Festival</title>
+    <style type="text/css">
+        .numbers {
+            padding: 0px;
+            width: 45px;
+            text-align: center;
+            font-family: Arial;
+            font-size: 38px;
+            font-weight: bold;   /* options are normal, bold, bolder, lighter */
+            font-style: normal;  /* options are normal or italic */
+            color: #FFFFFF;      /* change color using the hexadecimal color codes for HTML */
+        }
+        .title {        /* the styles below will affect the title under the numbers, i.e., “Days”, “Hours”, etc. */
+            border-style: none;
+            width: 45px;
+            text-align: center;
+            font-family: elfFont;
+            font-size: 15px;
+
+            font-weight: bold;   /* options are normal, bold, bolder, lighter */
+            color: #FFFFFF;      /* change color using the hexadecimal color codes for HTML */
+        }
+        #table {
+            width: auto;
+            height: 200px;
+            border-style: ridge;
+            border-width: 3px;
+            border-color: #666666;      /* change color using the hexadecimal color codes for HTML */
+            background-color: #222222;  /* change color using the hexadecimal color codes for HTML */
+        }
+    </style>
 
 </head>
 
 <body>
-<div id="everything" class="content-info ">
+<div class="content-info">
     <a href="" class="js" style="text-decoration: none">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
             Countdown
         </div>
     </a>
+    <table id="table" border="0" style="margin: 100px auto auto auto">
 
-    <div id="clock" style="height: 400px"></div>
+        <tr style="margin-bottom: 20px">
+            <td align="center" colspan="6" style="font-family: elfFont; color: #ffffff; margin: 10px 0 0 10px; font-size: 20px">Time left until Electric Love Festival starts
+                <div class="numbers" id="count2" style="padding: 5px 0 0 0;"></div></td>
 
-
+        </tr>
+        <tr id="spacer1">
+            <td align="center" ><div class="numbers" ></div></td>
+            <td align="center" ><div class="numbers" id="dday"></div></td>
+            <td align="center" ><div class="numbers" id="dhour"></div></td>
+            <td align="center" ><div class="numbers" id="dmin"></div></td>
+            <td align="center" ><div class="numbers" id="dsec"></div></td>
+            <td align="center" ><div class="numbers" ></div></td>
+        </tr>
+        <tr id="spacer2">
+            <td align="center" ><div class="title" ></div></td>
+            <td align="center" ><div class="title" id="days">Days</div></td>
+            <td align="center" ><div class="title" id="hours">Hours</div></td>
+            <td align="center" ><div class="title" id="minutes">Minutes</div></td>
+            <td align="center" ><div class="title" id="seconds">Seconds</div></td>
+            <td align="center" ><div class="title" ></div></td>
+        </tr>
+    </table>
 </div>
-</body>
 
+<script type="text/javascript">
+
+    /*
+     Count down until any date script-
+     By JavaScript Kit (www.javascriptkit.com)
+     Over 200+ free scripts here!
+     Modified by Robert M. Kuhnhenn, D.O.
+     on 5/30/2006 to count down to a specific date AND time,
+     and on 1/10/2010 to include time zone offset.
+     */
+
+    /*  Change the items below to create your countdown target date and announcement once the target date and time are reached.  */
+    var current="Winter is here!";        //—>enter what you want the script to display when the target date and time are reached, limit to 20 characters
+    var year=2015;              //—>Enter the count down target date YEAR
+    var month=07;                //—>Enter the count down target date MONTH
+    var day=09;                 //—>Enter the count down target date DAY
+    var hour=12;                //—>Enter the count down target date HOUR (24 hour clock)
+    var minute=00;              //—>Enter the count down target date MINUTE
+    var tz=+2;                  //—>Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
+
+    //—>    DO NOT CHANGE THE CODE BELOW!    <—
+    var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec");
+
+    function countdown(yr,m,d,hr,min){
+        theyear=yr;themonth=m;theday=d;thehour=hr;theminute=min;
+        var today=new Date();
+        var todayy=today.getYear();
+        if (todayy < 1000) {todayy+=1900;}
+        var todaym=today.getMonth();
+        var todayd=today.getDate();
+        var todayh=today.getHours();
+        var todaymin=today.getMinutes();
+        var todaysec=today.getSeconds();
+        var todaystring1=montharray[todaym]+" "+todayd+", "+todayy+" "+todayh+":"+todaymin+":"+todaysec;
+        var todaystring=Date.parse(todaystring1)+(tz*1000*60*60);
+        var futurestring1=(montharray[m-1]+" "+d+", "+yr+" "+hr+":"+min);
+        var futurestring=Date.parse(futurestring1)-(today.getTimezoneOffset()*(1000*60));
+        var dd=futurestring-todaystring;
+        var dday=Math.floor(dd/(60*60*1000*24)*1);
+        var dhour=Math.floor((dd%(60*60*1000*24))/(60*60*1000)*1);
+        var dmin=Math.floor(((dd%(60*60*1000*24))%(60*60*1000))/(60*1000)*1);
+        var dsec=Math.floor((((dd%(60*60*1000*24))%(60*60*1000))%(60*1000))/1000*1);
+        if(dday<=0&&dhour<=0&&dmin<=0&&dsec<=0){
+            document.getElementById('count2').innerHTML=current;
+            document.getElementById('count2').style.display="inline";
+            document.getElementById('count2').style.width="390px";
+            document.getElementById('dday').style.display="none";
+            document.getElementById('dhour').style.display="none";
+            document.getElementById('dmin').style.display="none";
+            document.getElementById('dsec').style.display="none";
+            document.getElementById('days').style.display="none";
+            document.getElementById('hours').style.display="none";
+            document.getElementById('minutes').style.display="none";
+            document.getElementById('seconds').style.display="none";
+            document.getElementById('spacer1').style.display="none";
+            document.getElementById('spacer2').style.display="none";
+            return;
+        }
+        else {
+            document.getElementById('count2').style.display="none";
+            document.getElementById('dday').innerHTML=dday;
+            document.getElementById('dhour').innerHTML=dhour;
+            document.getElementById('dmin').innerHTML=dmin;
+            document.getElementById('dsec').innerHTML=dsec;
+            setTimeout("countdown(theyear,themonth,theday,thehour,theminute)",1000);
+        }
+    }
+
+    countdown(year,month,day,hour,minute);
+
+</script>
+</body>
 </html>
