--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -25,9 +25,9 @@
 </head>
 
 <body>
-    <div id="everything" class="content-info">
+    <div id="everything" class="content-info js">
         <div class="row" style="padding: 0px; margin: 0px 0px 5px 0px; ">
-            <a href="" style="text-decoration: none;" class="js">
+            <a href="" style="text-decoration: none;">
                 <div class="col-xs-10 header_div" onclick="history.go(-1);return true;" style="padding: 0px">
                     <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                     Artists
