--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -15,16 +15,17 @@
 <div id="everything" class="content-info">
     <div class="row" style="padding: 0px; margin: 0px 0px 5px 0px; ">
         <a href="" style="text-decoration: none;" class="js">
-            <div class="col-xs-10 header_div" onclick="history.go(-1);return true;" style="padding: 0px">
+            <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0px">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Artists
+                Stages
             </div>
-        </a>
+        </a> <!--
         <div class="col-xs-2" style="padding: 0px">
             <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 5px"
-                                                                                      onmouseover="this.src='../img/max/options2.png'"
-                                                                                      onmouseout="this.src='../img/max/options.png'"></a>
+                onmouseover="this.src='../img/max/options2.png'"
+                onmouseout="this.src='../img/max/options.png'"></a>
         </div>
+        -->
     </div>
     <!-- Modal HTML -->
     <div id="myModal" class="modal fade">
