--- a/sites/love/countdown.html
+++ b/sites/love/countdown.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
@@ -8,6 +7,7 @@
     <script src="../../js/jquery-1.11.2.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="../../js/main.js"></script>
+
     <script src="phonegap.js"></script>
 
     <!-- Styles init -->
@@ -18,150 +18,42 @@
 
 
     <title>Electric Love Festival</title>
-    <style type="text/css">
-        .numbers {
-            padding: 0px;
-            text-align: center;
-            font-family: elfFont;
-            font-size: 38px;
-            font-weight: bold;
-            font-style: normal;
-            color: #FFFFFF;
-            background-color: rgba(42, 42, 42, 0.90);
-            height: 80px;
-        }
-        .title {
-            border-style: none;
-            text-align: center;
-            font-family: elfFont;
-            font-size: 13px;
-            font-weight: bold;
-            color: #FFFFFF;
-            background-color: rgba(42, 42, 42, 0.90);
-            height: 50px;
-
-        }
-        .countdown_text {
-            font-family: elfFont;
-            font-size: 20px;
-            color: #ffffff;
-            font-weight: bold;
-            text-align: center;
-            background-color: rgba(42, 42, 42, 0.90);
-            margin-top: 50px;
-            height: 100px;
-            line-height: 40px;
-
-        }
-    </style>
-
 </head>
 
 <body>
-<div class="content-info">
-    <a href="" class="js" style="text-decoration: none">
-        <div class="header_div" onclick="history.go(-1);return true;">
-            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
-            Countdown
+    <div class="content-info">
+        <a href="" class="js" style="text-decoration: none">
+            <div class="header_div" onclick="history.go(-1);return true;">
+                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
+                Countdown
+            </div>
+        </a>
+        <div class="container-fluid">
+            <div class="col-xs-12 countdown_text">Time until Electric Love Festival 2015 starts:</div>
+
+
+            <div class="numbers" id="count2"></div>
+
+            <div class="row" style="padding: 0px; margin: 0px;">
+                <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
+                <div class="col-xs-3 numbers" id="dhour"></div>
+                <div class="col-xs-3 numbers" id="dmin"></div>
+                <div class="col-xs-3 numbers" id="dsec"></div>
+
+            </div>
+
+
+
+            <div class="row" style="padding: 0px; margin: 0px;">
+                <div class="col-xs-3 title" id="days">DAYS</div>
+                <div class="col-xs-3 title" id="hours">HOURS</div>
+                <div class="col-xs-3 title" id="minutes">MINUTES</div>
+                <div class="col-xs-3 title" id="seconds">SECONDS</div>
+
+            </div>
         </div>
-    </a>
-    <div class="container-fluid">
-        <div class="col-xs-12 countdown_text">Time until Electric Love Festival 2015 starts:</div>
 
-
-        <div class="numbers" id="count2"></div>
-
-        <div class="row" style="padding: 0px; margin: 0px;">
-            <div class="col-xs-3 numbers" id="dday" style="padding: -5px"></div>
-            <div class="col-xs-3 numbers" id="dhour"></div>
-            <div class="col-xs-3 numbers" id="dmin"></div>
-            <div class="col-xs-3 numbers" id="dsec"></div>
-
-        </div>
-
-
-
-        <div class="row" style="padding: 0px; margin: 0px;">
-            <div class="col-xs-3 title" id="days">Days</div>
-            <div class="col-xs-3 title" id="hours">Hours</div>
-            <div class="col-xs-3 title" id="minutes">Minutes</div>
-            <div class="col-xs-3 title" id="seconds">Secounds</div>
-
-        </div>
     </div>
-
-</div>
-
-<script type="text/javascript">
-
-    /*
-     Count down until any date script-
-     By JavaScript Kit (www.javascriptkit.com)
-     Over 200+ free scripts here!
-     Modified by Robert M. Kuhnhenn, D.O.
-     on 5/30/2006 to count down to a specific date AND time,
-     and on 1/10/2010 to include time zone offset.
-     */
-
-    /*  Change the items below to create your countdown target date and announcement once the target date and time are reached.  */
-    var current="Winter is here!";        //—>enter what you want the script to display when the target date and time are reached, limit to 20 characters
-    var year=2015;              //—>Enter the count down target date YEAR
-    var month=07;                //—>Enter the count down target date MONTH
-    var day=09;                 //—>Enter the count down target date DAY
-    var hour=12;                //—>Enter the count down target date HOUR (24 hour clock)
-    var minute=00;              //—>Enter the count down target date MINUTE
-    var tz=+2;                  //—>Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
-
-    //—>    DO NOT CHANGE THE CODE BELOW!    <—
-    var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec");
-
-    function countdown(yr,m,d,hr,min){
-        theyear=yr;themonth=m;theday=d;thehour=hr;theminute=min;
-        var today=new Date();
-        var todayy=today.getYear();
-        if (todayy < 1000) {todayy+=1900;}
-        var todaym=today.getMonth();
-        var todayd=today.getDate();
-        var todayh=today.getHours();
-        var todaymin=today.getMinutes();
-        var todaysec=today.getSeconds();
-        var todaystring1=montharray[todaym]+" "+todayd+", "+todayy+" "+todayh+":"+todaymin+":"+todaysec;
-        var todaystring=Date.parse(todaystring1)+(tz*1000*60*60);
-        var futurestring1=(montharray[m-1]+" "+d+", "+yr+" "+hr+":"+min);
-        var futurestring=Date.parse(futurestring1)-(today.getTimezoneOffset()*(1000*60));
-        var dd=futurestring-todaystring;
-        var dday=Math.floor(dd/(60*60*1000*24)*1);
-        var dhour=Math.floor((dd%(60*60*1000*24))/(60*60*1000)*1);
-        var dmin=Math.floor(((dd%(60*60*1000*24))%(60*60*1000))/(60*1000)*1);
-        var dsec=Math.floor((((dd%(60*60*1000*24))%(60*60*1000))%(60*1000))/1000*1);
-        if(dday<=0&&dhour<=0&&dmin<=0&&dsec<=0){
-            document.getElementById('count2').innerHTML=current;
-            document.getElementById('count2').style.display="inline";
-            document.getElementById('count2').style.width="390px";
-            document.getElementById('dday').style.display="none";
-            document.getElementById('dhour').style.display="none";
-            document.getElementById('dmin').style.display="none";
-            document.getElementById('dsec').style.display="none";
-            document.getElementById('days').style.display="none";
-            document.getElementById('hours').style.display="none";
-            document.getElementById('minutes').style.display="none";
-            document.getElementById('seconds').style.display="none";
-            document.getElementById('spacer1').style.display="none";
-            document.getElementById('spacer2').style.display="none";
-            return;
-        }
-        else {
-            document.getElementById('count2').style.display="none";
-            document.getElementById('dday').innerHTML=dday;
-            document.getElementById('dhour').innerHTML=dhour;
-            document.getElementById('dmin').innerHTML=dmin;
-            document.getElementById('dsec').innerHTML=dsec;
-            setTimeout("countdown(theyear,themonth,theday,thehour,theminute)",1000);
-        }
-    }
-
-    countdown(year,month,day,hour,minute);
-
-</script>
+    <script src="../../js/countdown.js"></script>
 </body>
 </html>
