stages.html big changes
- hover animation added
- images added

--- a/sites/tt_stages.html
+++ b/sites/tt_stages.html
@@ -12,39 +12,77 @@
 </head>
 
 <body>
-<div id="everything" class="content-info">
-    <div class="row" style="padding: 0px; margin: 0px 0px 5px 0px; ">
-        <a href="" style="text-decoration: none;" class="js">
-            <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0px">
-                <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Stages
+    <div id="everything" class="content-info">
+        <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
+            <a href="" style="text-decoration: none;" class="js">
+                <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0">
+                    <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
+                    Stages
+                </div>
+            </a> <!--
+            <div class="col-xs-2" style="padding: 0px">
+                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 5px"
+                    onmouseover="this.src='../img/max/options2.png'"
+                    onmouseout="this.src='../img/max/options.png'"></a>
             </div>
-        </a> <!--
-        <div class="col-xs-2" style="padding: 0px">
-            <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 5px"
-                onmouseover="this.src='../img/max/options2.png'"
-                onmouseout="this.src='../img/max/options.png'"></a>
+            -->
         </div>
-        -->
-    </div>
-    <!-- Modal HTML -->
-    <div id="myModal" class="modal fade">
-        <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Sort by:</h4>
-                </div>
-                <div class="modal-body">
-                    <button type="button" class="btn btn-success">Name</button>
-                    <button type="button" class="btn btn-success">Time</button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- Modal HTML
+        <div id="myModal" class="modal fade">
+            <div class="modal-dialog" style=" margin: 100px auto 0px auto; height: 200px; width: 200px;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Sort by:</h4>
+                    </div>
+                    <div class="modal-body">
+                        <button type="button" class="btn btn-success">Name</button>
+                        <button type="button" class="btn btn-success">Time</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
+
+        ----------------------------------------->
+
+        <div class="container-fluid">
+            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+                <div class="row stage_row" id="mainstage">
+                    <div class="stage_img"><img src="../img/stages/mainstage.jpg" class="col-xs-12 stage_img"></div>
+                    <div class="col-xs-12 stage_text">MAINSTAGE</div>
+                </div>
+            </a>
+            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+                <div class="row stage_row" id="clubcircus">
+                    <div><img src="../img/stages/clubcircus.jpg" class="col-xs-12 stage_img"></div>
+                    <div class="col-xs-12 stage_text">CLUBCIRCUS</div>
+                </div>
+            </a>
+            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+                <div class="row stage_row" id="qdance">
+                    <div><img src="../img/stages/q-dance.jpg" class="col-xs-12 stage_img"></div>
+                    <div class="col-xs-12 stage_text">Q-DANCE</div>
+                </div>
+            </a>
+            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+                <div class="row stage_row" id="stonehenge">
+                    <div><img src="../img/stages/stonehenge.jpg" class="col-xs-12 stage_img"></div>
+                    <div class="col-xs-12 stage_text">STONEHENGE</div>
+                </div>
+            </a>
+            <a href="tt_artist.html" style="text-decoration: none; color: #ffffff;">
+                <div class="row stage_row" id="starclub">
+                    <div><img src="../img/stages/heineken.jpg" class="col-xs-12 stage_img"></div>
+                    <div class="col-xs-12 stage_text">HEINEKEN - STARCLUB</div>
+                </div>
+            </a>
+        </div>
+
+
+
     </div>
-</div>
 </body>
 
 </html>
