--- a/sites/tt_artist.html
+++ b/sites/tt_artist.html
@@ -26,15 +26,15 @@
 
 <body>
     <div id="everything" class="content-info js">
-        <div class="row" style="padding: 0px; margin: 0px 0px 5px 0px; ">
+        <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
             <a href="" style="text-decoration: none;">
-                <div class="col-xs-10 header_div" onclick="history.go(-1);return true;" style="padding: 0px">
+                <div class="col-xs-10 header_div" onclick="history.go(-1);return true;" style="padding: 0">
                     <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
                     Artists
                 </div>
             </a>
-            <div class="col-xs-2" style="padding: 0px">
-                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0px 0px 5px"
+            <div class="col-xs-2" style="padding: 0">
+                <a href="#myModal" class="btn options" data-toggle="modal" style=";"><img src="../img/max/options.png" style="height: 30px; margin: 5px 0 0 5px"
                     onmouseover="this.src='../img/max/options2.png'"
                     onmouseout="this.src='../img/max/options.png'"></a>
             </div>
